# orca_hess_to_veda_fmu

./: CHANGELOG.md  CITATION.cff  CITATION.cff.proposed  README.md  README_JA.md  adjust_mpo.py  adjust_mpo.pyw  build_mpo.py  build_mpo.pyw  orca_hess_to_veda_fmu.py  orca_hess_to_veda_fmu.pyw  pyproject.toml  requirements.txt
docs/: MANUAL_EN.md  MANUAL_JA.md
example/: dehydro_2S.hess  dehydro_2S.mpo  dehydro_2S.out  dehydro_2s.ved  skra.mpo
