[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orca-hess-to-veda-fmu"
version = "1.0.0"
description = "Convert ORCA .hess to VEDA-readable .fmu (minimal fchk-like)."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Kaoru Yamamoto"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
]

[project.urls]
"Documentation" = "README.md"
